--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,11 @@
-nielsen@memberwebs.com
+AUTHOR:
+Nate Nielsen <nielsen@memberwebs.com>
+
+CONTRIBUTORS:
+Andreas Steinmetz <ast@domdv.de>
+
+PATCHES:
+Berk D. Demir <demir@meteksan.net.tr>
+João Carlos Mendes Luís <jcmendes@int.gov.br>
+Jasper Slits <jasper@insiders.nl>
+Yamamoto Takao <takao@oakat.org>
