Rubio added a patch

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,9 +3,7 @@ Nate Nielsen <nielsen@memberwebs.com>
 
 CONTRIBUTORS:
 Andreas Steinmetz <ast@domdv.de>
+Rubio Vaughan <rubio@passim.net>
 
 PATCHES:
-Berk D. Demir <demir@meteksan.net.tr>
 João Carlos Mendes Luís <jcmendes@int.gov.br>
-Jasper Slits <jasper@insiders.nl>
-Yamamoto Takao <takao@oakat.org>
