--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 0.5
-  - Initial fork from clamsmtp version 0.9
+  - Added sample scripts.
+  - Initial fork from clamsmtp version 0.9.x
   - Converted into filter based SMTP pass-through
 
