--- a/doc/proxsmtpd.8
+++ b/doc/proxsmtpd.8
@@ -121,6 +121,8 @@ may need to escape them properly before use in your favorite scripting
 language. Failure to do this could lead to a REMOTE COMPROMISE of your 
 machine.
 .Bl -tag -width Fl
+.It Ar CLIENT
+The network address of the SMTP client connected.
 .It Ar EMAIL
 When the
 .Ar FilterType
@@ -130,6 +132,8 @@ The email addresses of the email recipients. These are specified one per
 line, in standard address format. 
 .It Ar SENDER
 The email address for the sender of the email. 
+.It Ar SERVER
+The network address of the SMTP server we're connected to.
 .It Ar TMPDIR
 The path to the temp directory in use. This is the same as the 
 .Ar TempDirectory
