--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
   - Added CLIENT and SERVER variables to VirusAction script environment.
   - Even better logging for network errors.
   - Print out proxsmtp version in debug logs
+  - Allow configuration of server keep alives (NOOPs). Default to none
 
 0.5
   - Added sample scripts.
