--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Rubio Vaughan <rubio@passim.net>
 PATCHES:
 João Carlos Mendes Luís <jcmendes@int.gov.br>
 Ben Mesman <ben@bncnetservice.nl>
+Olivier Beyssac <ob@r14.freenix.org>
