--- a/doc/proxsmtpd.8
+++ b/doc/proxsmtpd.8
@@ -148,7 +148,7 @@ using the
 .Fl d 
 option.
 .Sh LOOPBACK FEATURE
-In some cases it's advantagous to consolidate the filtering for several mail 
+In some cases it's advantageous to consolidate the filtering for several mail 
 servers on one machine. 
 .Nm
 allows this by providing a loopback feature to connect back to the IP that an 
