--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-1.0  ?????
+1.1
+  - Removed erroneous chown line from clamsmtpd.sh
+
+1.0  [2004-12-02]
   - Added XCLIENT support.
   - Drop XCLIENT commands coming in from clients for security.
   - Added big scary warnings to the sample scripts about escaping variables.
