Fixes from Loic Le Loarer <loic.le-loarer@polytechnique.org>

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,3 +17,4 @@ Laurent Papier <papier@tuxfan.net>
 Piotr Klaban <post@klaban.torun.pl>
 Greg Hackney <hackney@swbell.net>
 Billy B. Bilano <mr.bill.bilano@email.server.unix.bill.bilano.biz>
+Loic Le Loarer <loic.le-loarer@polytechnique.org>
