Fixes from Loic Le Loarer

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
   - Fix problem with binding to certain 'long' addresses
   - Support embedded NULLs in email data.
   - Fix problems with empty addresses in logs.
+  - Don't let exchange send it's strange binary data through the proxy
+  - Don't reject emails when server is overloaded or errors.
+  - Don't reject emails when starting the filter command fails.
 
 1.2.1 [2005-04-15]
   - Fixed bug (introduced in 1.2) when 'Header' option is not present.
