--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+1.4 [???]
+  - Fix crasher after connection closes unexpectedly.
+
 1.3 [2005-10-21]
   - Handle condition of server refusing data transfers more gracefully.
   - Less chatty when setting timeouts fail
