Fix problem when waiting for processes.

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,4 @@ Piotr Klaban <post@klaban.torun.pl>
 Greg Hackney <hackney@swbell.net>
 Billy B. Bilano <mr.bill.bilano@email.server.unix.bill.bilano.biz>
 Loic Le Loarer <loic.le-loarer@polytechnique.org>
+Jeff Fisher <jeff@lfchosting.com>
