--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-1.4 [???]
+1.5 ????
+  - Added support for setting the REMOTE variable when an XFORWARD
+    command is seen.
+
+1.4 [2006-08-10]
   - Fix crasher after connection closes unexpectedly.
   - Fix problem with waiting for processes [Jeff Fisher]
   - Better message for 'busy' [Akihiro Sagawa]
