--- a/doc/proxsmtpd.8
+++ b/doc/proxsmtpd.8
@@ -130,6 +130,14 @@ option is set to 'file', this specifies the file that the email was saved to.
 .It Ar RECIPIENTS
 The email addresses of the email recipients. These are specified one per 
 line, in standard address format. 
+.It Ar REMOTE
+If 
+.Nm
+is being used to filter email between SMTP servers, then this is the 
+IP address of the original client. In order for this information to be present 
+(a) the SMTP client (sending server) must an send an XFORWARD command and (b) 
+the SMTP server (receiving server) must accept that XFORWARD command without 
+error.
 .It Ar SENDER
 The email address for the sender of the email. 
 .It Ar SERVER
