Use 'Stef' instead of 'Nate'

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 AUTHOR:
-Nate Nielsen <nielsen@memberwebs.com>
+Stef Walter <stef@memberwebs.com>
 
 CONTRIBUTORS:
 Andreas Steinmetz <ast@domdv.de>
