--- a/doc/proxsmtpd.8
+++ b/doc/proxsmtpd.8
@@ -1,5 +1,5 @@
 .\" 
-.\" Copyright (c) 2004, Nate Nielsen
+.\" Copyright (c) 2004, Stefan Walter
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without 
@@ -32,7 +32,7 @@
 .\" 
 .\"
 .\" CONTRIBUTORS
-.\"  Nate Nielsen <nielsen@memberwebs.com>
+.\"  Stef Walter <stef@memberwebs.com>
 .\"
 .Dd September, 2004
 .Dt proxsmtpd 8
@@ -218,4 +218,4 @@ loopback feature is used (see above).
 .Sh SEE ALSO
 .Xr proxsmtpd.conf 5
 .Sh AUTHOR
-.An Nate Nielsen Aq nielsen@memberwebs.com
+.An Stef Walter Aq stef@memberwebs.com
