--- a/doc/proxsmtpd.conf.5
+++ b/doc/proxsmtpd.conf.5
@@ -1,5 +1,5 @@
 .\" 
-.\" Copyright (c) 2004, Nate Nielsen
+.\" Copyright (c) 2004, Stefan Walter
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without 
@@ -32,7 +32,7 @@
 .\" 
 .\"
 .\" CONTRIBUTORS
-.\"  Nate Nielsen <nielsen@memberwebs.com>
+.\"  Stef Walter <stef@memberwebs.com>
 .\"
 .Dd September, 2004
 .Dt proxsmtpd.conf 5
@@ -174,4 +174,4 @@ IPv6 addresses are implemented but disabled. The code needs testing.
 .Sh SEE ALSO
 .Xr proxsmtpd 8 
 .Sh AUTHOR
-.An Nate Nielsen Aq nielsen@memberwebs.com
+.An Stef Walter Aq stef@memberwebs.com
