Send an RSET to the server after filter fails some data.

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,3 +19,4 @@ Greg Hackney <hackney@swbell.net>
 Billy B. Bilano <mr.bill.bilano@email.server.unix.bill.bilano.biz>
 Loic Le Loarer <loic.le-loarer@polytechnique.org>
 Jeff Fisher <jeff@lfchosting.com>
+Guy Helmer <ghelmer@palisadesys.com>
