--- a/ChangeLog
+++ b/ChangeLog
@@ -1,66 +1,32 @@
-1.8 [2008-06-30]
- - Make the XFOWARD HELO available as a environment variable in scripts. [Glenn Matthys]
- - Send an RSET to the server after filter fails an email.
- - Fix an uninitialized pid variable.
+=== ChangeLog discontinued ===
 
-1.7 [2007-05-28]
- - Use my real name 'Stef Walter'
-   See: http://memberwebs.com/nielsen/
+ With the move to git, this project is switching from a ChangeLog
+ file to relying on commit messages to provide change history. Please
+ write commit messages in the following format:
 
-1.6 [2006-11-13]
-  - On FreeBSD fix problem where stderr wasn't processed when filter
-    didn't read stdin.
-  - Add strcasestr which is missing on Solaris.
-  - Add back 'Header' option which was accidentally removed in 1.5. Blush!
+=== begin example commit ===
 
-1.5 [2006-09-05]
-  - Added support for setting the REMOTE variable when an XFORWARD
-    command is seen.
+ Short explanation of the commit
 
-1.4 [2006-08-10]
-  - Fix crasher after connection closes unexpectedly.
-  - Fix problem with waiting for processes [Jeff Fisher]
-  - Better message for 'busy' [Akihiro Sagawa]
+ Longer explanation explaining exactly what's changed, whether any
+ external or private interfaces changed, what bugs were fixed (with bug
+ tracker reference if applicable) and so forth. Be concise but not too
+ brief.
 
-1.3 [2005-10-21]
-  - Handle condition of server refusing data transfers more gracefully.
-  - Less chatty when setting timeouts fail
-  - Drop privileges after binding to port. Allows listening on ports < 1024
-  - Ported to Solaris
-  - Fix problem with binding to certain 'long' addresses
-  - Support embedded NULLs in email data.
-  - Fix problems with empty addresses in logs.
-  - Don't let exchange send it's strange binary data through the proxy
-  - Don't reject emails when server is overloaded or errors.
-  - Don't reject emails when starting the filter command fails.
+=== end example commit ===
 
-1.2.1 [2005-04-15]
-  - Fixed bug (introduced in 1.2) when 'Header' option is not present.
+ - Always add a brief description of the commit to the _first_ line of
+ the commit and terminate by two newlines. This may be the title of
+ a fixed bug, copied from Bugzilla.
 
-1.2  [2005-03-24]
-  - Don't leak file descriptors when clamsmtpd can't connect to outgoing
-  	SMTP server [Chris Mason]
-  - 'Header' configuration option with special format arguments [Olivier Beyssac]
-  - Supress weird warnings when looking up names of local unix connections.
+ - First line (the brief description) must only be one sentence and
+ should start with a capital letter unless it starts with a
+ lowercase symbol or identifier. Don't use a trailing full stop,
+ and don't exceed 72 characters.
 
-1.1  [2005-01-27]
-  - Fixed crasher when outgoing connection couldn't be established
-  - Removed erroneous chown line from clamsmtpd.sh
+ - The main description (the body) is normal prose and should use
+ normal punctuation and capital letters where appropriate.
 
-1.0  [2004-12-02]
-  - Added XCLIENT support.
-  - Drop XCLIENT commands coming in from clients for security.
-  - Added big scary warnings to the sample scripts about escaping variables.
-  - Documentation fixes [Olivier Beyssac]
-
-0.6  [2004-10-30]
-  - Added CLIENT and SERVER variables to VirusAction script environment.
-  - Even better logging for network errors and filter warnings.
-  - Print out proxsmtp version in debug logs
-  - Allow configuration of server keep alives (NOOPs). Default to none
-
-0.5  [2004-10-20]
-  - Added sample scripts.
-  - Initial fork from clamsmtp version 0.9.x
-  - Converted into filter based SMTP pass-through
-
+ - When committing code on behalf of others use the --author option,
+ e.g. git commit -a --author "Joe Coder <joe@coder.org>" and
+ --signoff.
