--- a/README
+++ b/README
@@ -1,5 +1,7 @@
-=================================================================
-                        PROXSMTP README
+Transparent SMTP proxy http://wiki.halon.io/Proxy for Halon's email gateway, fork of http://thewalter.net/stef/software/proxsmtp/
 
-See the website:
-http://memberwebs.com/swalter/software/proxsmtp/
+Installation on Debian
+----------------------
+  apt-get install libcap-dev
+  sh autogen.sh
+  make
